templates and all

--- a/templates/agenda.html
+++ b/templates/agenda.html
@@ -431,6 +431,9 @@
             <div class="mb-3 d-flex gap-2 justify-content-center">
                 <button id="btnMeusAgendamentos" class="btn btn-outline-primary active" type="button">Meus agendamentos</button>
                 <button id="btnTodosAgendamentos" class="btn btn-outline-secondary" type="button">Todos</button>
+                <button id="btnRefreshAgenda" class="btn btn-outline-success" type="button" title="Atualizar dados">
+                    <i class="bi bi-arrow-clockwise"></i>
+                </button>
             </div>
 
             <div id="calendar-container">
